--- a/Term_Project_insta_crawling.ipynb
+++ b/Term_Project_insta_crawling.ipynb
@@ -2,111 +2,38 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting selenium\n",
-      "  Downloading selenium-4.9.1-py3-none-any.whl (6.6 MB)\n",
-      "     ---------------------------------------- 6.6/6.6 MB 9.1 MB/s eta 0:00:00\n",
-      "Collecting urllib3[socks]<3,>=1.26\n",
-      "  Downloading urllib3-2.0.2-py3-none-any.whl (123 kB)\n",
-      "     -------------------------------------- 123.2/123.2 kB 7.5 MB/s eta 0:00:00\n",
-      "Collecting trio~=0.17\n",
-      "  Downloading trio-0.22.0-py3-none-any.whl (384 kB)\n",
-      "     -------------------------------------- 384.9/384.9 kB 8.0 MB/s eta 0:00:00\n",
-      "Collecting trio-websocket~=0.9\n",
-      "  Downloading trio_websocket-0.10.2-py3-none-any.whl (17 kB)\n",
-      "Collecting certifi>=2021.10.8\n",
-      "  Downloading certifi-2023.5.7-py3-none-any.whl (156 kB)\n",
-      "     -------------------------------------- 157.0/157.0 kB 9.8 MB/s eta 0:00:00\n",
-      "Collecting attrs>=19.2.0\n",
-      "  Downloading attrs-23.1.0-py3-none-any.whl (61 kB)\n",
-      "     ---------------------------------------- 61.2/61.2 kB 3.2 MB/s eta 0:00:00\n",
-      "Collecting sortedcontainers\n",
-      "  Downloading sortedcontainers-2.4.0-py2.py3-none-any.whl (29 kB)\n",
-      "Collecting async-generator>=1.9\n",
-      "  Downloading async_generator-1.10-py3-none-any.whl (18 kB)\n",
-      "Collecting idna\n",
-      "  Downloading idna-3.4-py3-none-any.whl (61 kB)\n",
-      "     ---------------------------------------- 61.5/61.5 kB 1.7 MB/s eta 0:00:00\n",
-      "Collecting outcome\n",
-      "  Downloading outcome-1.2.0-py2.py3-none-any.whl (9.7 kB)\n",
-      "Collecting sniffio\n",
-      "  Downloading sniffio-1.3.0-py3-none-any.whl (10 kB)\n",
-      "Collecting cffi>=1.14\n",
-      "  Downloading cffi-1.15.1-cp311-cp311-win_amd64.whl (179 kB)\n",
-      "     -------------------------------------- 179.0/179.0 kB 5.4 MB/s eta 0:00:00\n",
-      "Collecting exceptiongroup\n",
-      "  Downloading exceptiongroup-1.1.1-py3-none-any.whl (14 kB)\n",
-      "Collecting wsproto>=0.14\n",
-      "  Downloading wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
-      "Collecting pysocks!=1.5.7,<2.0,>=1.5.6\n",
-      "  Downloading PySocks-1.7.1-py3-none-any.whl (16 kB)\n",
-      "Collecting pycparser\n",
-      "  Downloading pycparser-2.21-py2.py3-none-any.whl (118 kB)\n",
-      "     -------------------------------------- 118.7/118.7 kB 6.8 MB/s eta 0:00:00\n",
-      "Collecting h11<1,>=0.9.0\n",
-      "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
-      "     ---------------------------------------- 58.3/58.3 kB 3.2 MB/s eta 0:00:00\n",
-      "Installing collected packages: sortedcontainers, urllib3, sniffio, pysocks, pycparser, idna, h11, exceptiongroup, certifi, attrs, async-generator, wsproto, outcome, cffi, trio, trio-websocket, selenium\n",
-      "Successfully installed async-generator-1.10 attrs-23.1.0 certifi-2023.5.7 cffi-1.15.1 exceptiongroup-1.1.1 h11-0.14.0 idna-3.4 outcome-1.2.0 pycparser-2.21 pysocks-1.7.1 selenium-4.9.1 sniffio-1.3.0 sortedcontainers-2.4.0 trio-0.22.0 trio-websocket-0.10.2 urllib3-2.0.2 wsproto-1.2.0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip available: 22.3.1 -> 23.1.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! pip install selenium"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting beautifulsoup4"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip available: 22.3.1 -> 23.1.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "  Downloading beautifulsoup4-4.12.2-py3-none-any.whl (142 kB)\n",
-      "     -------------------------------------- 143.0/143.0 kB 8.3 MB/s eta 0:00:00\n",
-      "Collecting soupsieve>1.2\n",
-      "  Downloading soupsieve-2.4.1-py3-none-any.whl (36 kB)\n",
-      "Installing collected packages: soupsieve, beautifulsoup4\n",
-      "Successfully installed beautifulsoup4-4.12.2 soupsieve-2.4.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! pip install beautifulsoup4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install openpyxl"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install pandas"
    ]
   },
   {
@@ -119,33 +46,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\cty07\\AppData\\Local\\Temp\\ipykernel_12244\\143903614.py:8: DeprecationWarning: executable_path has been deprecated, please pass in a Service object\n",
-      "  driver = webdriver.Chrome('./chromedriver.exe')\n"
-     ]
-    },
-    {
-     "ename": "NoSuchElementException",
-     "evalue": "Message: no such element: Unable to locate element: {\"method\":\"xpath\",\"selector\":\"//*[@id=\"mount_0_0_OH\"]\"}\n  (Session info: chrome=113.0.5672.93)\nStacktrace:\nBacktrace:\n\tGetHandleVerifier [0x00398893+48451]\n\t(No symbol) [0x0032B8A1]\n\t(No symbol) [0x00235058]\n\t(No symbol) [0x00260467]\n\t(No symbol) [0x0026069B]\n\t(No symbol) [0x0028DD92]\n\t(No symbol) [0x0027A304]\n\t(No symbol) [0x0028C482]\n\t(No symbol) [0x0027A0B6]\n\t(No symbol) [0x00257E08]\n\t(No symbol) [0x00258F2D]\n\tGetHandleVerifier [0x005F8E3A+2540266]\n\tGetHandleVerifier [0x00638959+2801161]\n\tGetHandleVerifier [0x0063295C+2776588]\n\tGetHandleVerifier [0x00422280+612144]\n\t(No symbol) [0x00334F6C]\n\t(No symbol) [0x003311D8]\n\t(No symbol) [0x003312BB]\n\t(No symbol) [0x00324857]\n\tBaseThreadInitThunk [0x76660099+25]\n\tRtlGetAppContainerNamedObjectPath [0x776E7B6E+286]\n\tRtlGetAppContainerNamedObjectPath [0x776E7B3E+238]\n",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNoSuchElementException\u001b[0m                    Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[12], line 41\u001b[0m\n\u001b[0;32m     38\u001b[0m     first\u001b[39m.\u001b[39mclick()\n\u001b[0;32m     39\u001b[0m     time\u001b[39m.\u001b[39msleep(\u001b[39m5\u001b[39m)\n\u001b[1;32m---> 41\u001b[0m select_first(driver)\n\u001b[0;32m     45\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mget_content\u001b[39m(driver):          \u001b[39m# 본문,태그,날짜,좋아요 수집\u001b[39;00m\n\u001b[0;32m     46\u001b[0m     html \u001b[39m=\u001b[39m driver\u001b[39m.\u001b[39mpage_source\n",
-      "Cell \u001b[1;32mIn[12], line 37\u001b[0m, in \u001b[0;36mselect_first\u001b[1;34m(driver)\u001b[0m\n\u001b[0;32m     36\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mselect_first\u001b[39m(driver):          \u001b[39m# 첫번째 게시물 선택 \u001b[39;00m\n\u001b[1;32m---> 37\u001b[0m     first \u001b[39m=\u001b[39m driver\u001b[39m.\u001b[39;49mfind_element(By\u001b[39m.\u001b[39;49mXPATH, \u001b[39m'\u001b[39;49m\u001b[39m//*[@id=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39mmount_0_0_OH\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39m]\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[0;32m     38\u001b[0m     first\u001b[39m.\u001b[39mclick()\n\u001b[0;32m     39\u001b[0m     time\u001b[39m.\u001b[39msleep(\u001b[39m5\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\cty07\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:831\u001b[0m, in \u001b[0;36mWebDriver.find_element\u001b[1;34m(self, by, value)\u001b[0m\n\u001b[0;32m    828\u001b[0m     by \u001b[39m=\u001b[39m By\u001b[39m.\u001b[39mCSS_SELECTOR\n\u001b[0;32m    829\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m[name=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mvalue\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m\u001b[39m]\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m--> 831\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mexecute(Command\u001b[39m.\u001b[39;49mFIND_ELEMENT, {\u001b[39m\"\u001b[39;49m\u001b[39musing\u001b[39;49m\u001b[39m\"\u001b[39;49m: by, \u001b[39m\"\u001b[39;49m\u001b[39mvalue\u001b[39;49m\u001b[39m\"\u001b[39;49m: value})[\u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m]\n",
-      "File \u001b[1;32mc:\\Users\\cty07\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\remote\\webdriver.py:440\u001b[0m, in \u001b[0;36mWebDriver.execute\u001b[1;34m(self, driver_command, params)\u001b[0m\n\u001b[0;32m    438\u001b[0m response \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcommand_executor\u001b[39m.\u001b[39mexecute(driver_command, params)\n\u001b[0;32m    439\u001b[0m \u001b[39mif\u001b[39;00m response:\n\u001b[1;32m--> 440\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49merror_handler\u001b[39m.\u001b[39;49mcheck_response(response)\n\u001b[0;32m    441\u001b[0m     response[\u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_unwrap_value(response\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mvalue\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39mNone\u001b[39;00m))\n\u001b[0;32m    442\u001b[0m     \u001b[39mreturn\u001b[39;00m response\n",
-      "File \u001b[1;32mc:\\Users\\cty07\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\selenium\\webdriver\\remote\\errorhandler.py:245\u001b[0m, in \u001b[0;36mErrorHandler.check_response\u001b[1;34m(self, response)\u001b[0m\n\u001b[0;32m    243\u001b[0m         alert_text \u001b[39m=\u001b[39m value[\u001b[39m\"\u001b[39m\u001b[39malert\u001b[39m\u001b[39m\"\u001b[39m]\u001b[39m.\u001b[39mget(\u001b[39m\"\u001b[39m\u001b[39mtext\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    244\u001b[0m     \u001b[39mraise\u001b[39;00m exception_class(message, screen, stacktrace, alert_text)  \u001b[39m# type: ignore[call-arg]  # mypy is not smart enough here\u001b[39;00m\n\u001b[1;32m--> 245\u001b[0m \u001b[39mraise\u001b[39;00m exception_class(message, screen, stacktrace)\n",
-      "\u001b[1;31mNoSuchElementException\u001b[0m: Message: no such element: Unable to locate element: {\"method\":\"xpath\",\"selector\":\"//*[@id=\"mount_0_0_OH\"]\"}\n  (Session info: chrome=113.0.5672.93)\nStacktrace:\nBacktrace:\n\tGetHandleVerifier [0x00398893+48451]\n\t(No symbol) [0x0032B8A1]\n\t(No symbol) [0x00235058]\n\t(No symbol) [0x00260467]\n\t(No symbol) [0x0026069B]\n\t(No symbol) [0x0028DD92]\n\t(No symbol) [0x0027A304]\n\t(No symbol) [0x0028C482]\n\t(No symbol) [0x0027A0B6]\n\t(No symbol) [0x00257E08]\n\t(No symbol) [0x00258F2D]\n\tGetHandleVerifier [0x005F8E3A+2540266]\n\tGetHandleVerifier [0x00638959+2801161]\n\tGetHandleVerifier [0x0063295C+2776588]\n\tGetHandleVerifier [0x00422280+612144]\n\t(No symbol) [0x00334F6C]\n\t(No symbol) [0x003311D8]\n\t(No symbol) [0x003312BB]\n\t(No symbol) [0x00324857]\n\tBaseThreadInitThunk [0x76660099+25]\n\tRtlGetAppContainerNamedObjectPath [0x776E7B6E+286]\n\tRtlGetAppContainerNamedObjectPath [0x776E7B3E+238]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import time\n",
     "from selenium import webdriver\n",
@@ -159,13 +62,13 @@
     "driver.get(url)\n",
     "time.sleep(5)\n",
     "\n",
-    "email = 'id'\n",
+    "email = 'openss_1234'\n",
     "input_id = driver.find_elements(By.CSS_SELECTOR, 'input')[0]\n",
     "input_id.clear()\n",
     "input_id.send_keys(email)\n",
     "\n",
     "\n",
-    "password = 'pw'\n",
+    "password = 'chlxodud0720!'\n",
     "input_pw = driver.find_elements(By.CSS_SELECTOR, 'input')[1]\n",
     "input_pw.clear()\n",
     "input_pw.send_keys(password)\n",
@@ -182,8 +85,12 @@
     "time.sleep(5)\n",
     "\n",
     "\n",
+    "\n",
+    "\n",
     "def select_first(driver):          # 첫번째 게시물 선택 \n",
-    "    first = driver.find_element(By.XPATH, )\n",
+    "    time.sleep(5)\n",
+    "    first=driver.find_elements(By.TAG_NAME,'div')[1]\n",
+    "    time.sleep(5)\n",
     "    first.click()\n",
     "    time.sleep(5)\n",
     "\n",
@@ -193,23 +100,24 @@
     "\n",
     "def get_content(driver):          # 본문,태그,날짜,좋아요 수집\n",
     "    html = driver.page_source\n",
-    "    soup = BeautifulSoup(html, 'lxml')\n",
+    "    soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
     "    try:\n",
-    "        content = soup.select('div.C4VMK > span')[0].text  \n",
+    "        content = soup.select('div._a9zs > h1')[0].text  \n",
     "        content = unicodedata.normalize('NFC', content)\n",
     "    except:\n",
     "        content = ' '\n",
     "    \n",
     "    tags = re.findall(r'#[^s#,\\\\]+',content)\n",
-    "    date = soup.select('time._1o9PC.Nzb55')[0]['datetime'][:10]\n",
+    "\n",
+    "    date = soup.select('time._aaqe')[0]['datetime'][:10]\n",
     "    try:\n",
-    "        like = soup.select('div.Nm9Fw > a.zV_Nj')[0].text[4:-1]\n",
+    "        like = soup.select('div >span > a > span')[0].text\n",
     "    except:\n",
     "        like = 0\n",
     "    \n",
     "    try:\n",
-    "        place = soup.select('div.M30cS')[0].text\n",
+    "        place = soup.select('div._aacl._aacn._aacu._aacy._aada._aade')[0].text\n",
     "        place = unicodedata.normalize('NFC', place)\n",
     "    except:\n",
     "        place = ''\n",
@@ -219,13 +127,15 @@
     "\n",
     "\n",
     "def move_next(driver):            # 다음 게시글 조회\n",
-    "    right = driver.find_element(By.CSS_SELECTOR,  )\n",
-    "    right.click()\n",
-    "    time.sleep(5)\n",
+    "    time.sleep(2)\n",
+    "    right = driver.find_element(By.TAG_NAME,'html')    \n",
+    "    right.send_keys(Keys.ARROW_RIGHT)\n",
+    "    time.sleep(2)\n",
+    "\n",
     "\n",
     "results = [ ] \n",
     "\n",
-    "target = 10\n",
+    "target = 5\n",
     "for i in range(target):\n",
     "    try:\n",
     "        data = get_content(driver)\n",
@@ -234,13 +144,14 @@
     "    except:\n",
     "        time.sleep(2)\n",
     "        move_next(driver)\n",
+    "    \n",
     "\n",
     "\n",
     "import pandas as pd               # csv 파일로 저장\n",
     "\n",
     "results_df = pd.DataFrame(results)\n",
     "results_df.columns = ['content', 'date', 'like', 'place', 'tags']\n",
-    "results_df.to_csv('./insta_movie_crawling.csv',index=False)\n",
+    "results_df.to_excel('./insta_hotp_crawling.xlsx',index=False)\n",
     "\n",
     "\n"
    ]
