insta_crawling.ipynb
delete id,pw

--- a/Term_Project_insta_crawling.ipynb
+++ b/Term_Project_insta_crawling.ipynb
@@ -62,13 +62,13 @@
     "driver.get(url)\n",
     "time.sleep(5)\n",
     "\n",
-    "email = 'openss_1234'\n",
+    "email = 'insta ID'\n",
     "input_id = driver.find_elements(By.CSS_SELECTOR, 'input')[0]\n",
     "input_id.clear()\n",
     "input_id.send_keys(email)\n",
     "\n",
     "\n",
-    "password = 'chlxodud0720!'\n",
+    "password = 'insta PW'\n",
     "input_pw = driver.find_elements(By.CSS_SELECTOR, 'input')[1]\n",
     "input_pw.clear()\n",
     "input_pw.send_keys(password)\n",
@@ -80,7 +80,7 @@
     "    url = 'https://www.instagram.com/explore/tags/' + word\n",
     "    return url \n",
     "\n",
-    "url = insta_search('대구맛집')\n",
+    "url = insta_search('WORD')\n",
     "driver.get(url)\n",
     "time.sleep(5)\n",
     "\n",
@@ -147,7 +147,7 @@
     "    \n",
     "\n",
     "\n",
-    "import pandas as pd               # csv 파일로 저장\n",
+    "import pandas as pd               # xlsx 파일로 저장\n",
     "\n",
     "results_df = pd.DataFrame(results)\n",
     "results_df.columns = ['content', 'date', 'like', 'place', 'tags']\n",
